--- a/home/templates/userside/user_login.html
+++ b/home/templates/userside/user_login.html
@@ -25,7 +25,8 @@
             </div>
            
             <button type="submit">Log In</button>
-            <a href="{% url 'signup' %} " >Create a account</a>
+           <div class=" col d-flex"> <a href="{% url 'signup' %} " >Create a account</a>
+        
            
         </form>
     </div>
