--- a/home/templates/userside/mainshop.html
+++ b/home/templates/userside/mainshop.html
@@ -153,7 +153,32 @@
 
 {% block corousel %} 
 
-   
+   <style>
+    /* Overlay effect */
+.unavailable-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the transparency here */
+    z-index: 1; /* Ensure the overlay is above the image */
+}
+
+/* Style for "Unavailable" text */
+.unavailable-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
+    color: #fff; /* Text color */
+    background-color: rgba(0, 0, 0, 0.7); /* Background color */
+    padding: 8px 12px;
+    border-radius: 5px;
+    z-index: 2; /* Ensure the text is above the overlay */
+}
+   </style>
 
 
     <!-- Shop Start -->
@@ -279,10 +304,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                         <div class="card product-item border-0 mb-4" style="width: 100%;">
                             <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
+                            
                                 <img class="img-fluid w-100" src="{{ p.product_image.first.image.url }}" alt="" style="height: 275px;">
                             </div>
                             <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                                 <h6 class="text-truncate mb-3">{{p.pr_name}}</h6>
+                             
                                 <div class="d-flex justify-content-center">
                                     <h6>{{p.product_varient.first.price}}</h6>
                                     <h6 class="text-muted ml-2"><del>{{p.product_varient.first.price}}</del></h6>
@@ -292,6 +319,7 @@
                                 <a href="{% url 'product_detail' id=p.id %}" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
                             </div>
+                           
                         </div>
                     </div>
                     {% endfor %}
