adress management bug solved

--- a/home/templates/userside/updateaddress.html
+++ b/home/templates/userside/updateaddress.html
@@ -46,7 +46,7 @@
     <label for="landmark">Landmark:</label>
     <textarea type="text"class="form-control custom-input"  value="{{address.landmark}}" id="landmark" name="landmark"></textarea>
 </div>
-    <a href="{% url 'addressdisplay' %}" class="btn btn-primary  align-self-center" type="submit" value="Submit">Submit</a>
+    <input href="{% url 'addressdisplay' %}" class="btn btn-primary  align-self-center" type="submit" value="Submit">
   </form>
 </div>
 
