--- a/home/templates/userside/cart.html
+++ b/home/templates/userside/cart.html
@@ -91,14 +91,11 @@
                 <div class="card-header bg-secondary border-0">
                     <h4 class="font-weight-semi-bold m-0">Delivery Address</h4>
                 </div>
-                {% if address %}
-                <div class="card-body">
-                    <h5 class="card-title">{{address.house_name}}</h5>
-                    <p class="card-text">{{address.street}},{{address.city}},{{address.postal_code}}</p>
-                    <p class="card-text">{{address.district}},{{address.state}},{{address.country}}</p>
-                    <div class="input-group-append">
-                        <a href="{% url 'addressdisplay' %}"  class="btn btn-primary">Change Address</a>
-                    </div>   
+                {% if not address %}
+                <div class="input-group-append">
+                    <a href="{% url 'addressdisplay' %}"  class="btn btn-primary mt-4">Add Address</a>
+                </div> 
+                   
                     <!-- <div class="form-check">
                         <input class="form-check-input  default-address" type="radio" name="defaultAddress" value="{{ address.id }}" id="defaultAddress{{ address.id }} {% if address.is_default %} checked {% endif %}" >
                         <label class="form-check-label" for="defaultAddress{{ address.id }}">
@@ -106,9 +103,13 @@
                         </label>
                 </div> -->
                 {% else %}
-                <div class="input-group-append">
-                    <a href="{% url 'addressdisplay' %}"  class="btn btn-primary">Add Address</a>
-                </div> 
+                <div class="card-body ">
+                    <h5 class="card-title text-center text-capitalize">{{address.house_name}}</h5>
+                    <p class="card-text text-center text-capitalize">{{address.street}},{{address.city}},{{address.postal_code}}</p>
+                    <p class="card-text text-center text-capitalize">{{address.district}},{{address.state}},{{address.country}}</p>
+                    <div class="input-group-append">
+                        <a href="{% url 'addressdisplay' %}"  class="btn btn-block btn-primary">Edit or Change Address</a>
+                    </div>
                 <div class="card-footer border-secondary bg-transparent">
                     <button class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Place Order</button>
                 </div>
