--- a/home/templates/userside/cart.html
+++ b/home/templates/userside/cart.html
@@ -64,6 +64,33 @@
                         <button class="btn btn-primary">Apply Coupon</button>
                     </div>
                 </div>
+                <div class="card border-secondary mb-5">
+                    <div class="card-header bg-secondary border-0">
+                        <h4 class="font-weight-semi-bold m-0">Delivery Address</h4>
+                    </div>
+                    {% if not address %}
+                    <div class="card-footer border-secondary bg-transparent">
+                        <a href="{% url 'addressdisplay' %}"  class="btn btn-sm btn-block btn-primary  my-3 py-3">Add Address</a>
+                    </div>
+                       
+                        <!-- <div class="form-check">
+                            <input class="form-check-input  default-address" type="radio" name="defaultAddress" value="{{ address.id }}" id="defaultAddress{{ address.id }} {% if address.is_default %} checked {% endif %}" >
+                            <label class="form-check-label" for="defaultAddress{{ address.id }}">
+                                Set as Default
+                            </label>
+                    </div> -->
+                    {% else %}
+                    <div class="card-body ">
+                        <h5 class="card-title text-center text-capitalize">{{address.house_name}}</h5>
+                        <p class="card-text text-center text-capitalize">{{address.street}},{{address.city}},{{address.postal_code}}</p>
+                        <p class="card-text text-center text-capitalize">{{address.district}},{{address.state}},{{address.country}}</p>
+                        
+                    <div class="card-footer border-secondary bg-transparent">
+                        <a href="{% url 'addressdisplay' %}"  class="btn btn-sm btn-block btn-primary  my-3 py-3">Edit or Change Address</a>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
             </form>
             <div class="card border-secondary mb-5">
                 <div class="card-header bg-secondary border-0">
@@ -72,50 +99,22 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between mb-3 pt-1">
                         <h6 class="font-weight-medium">Subtotal</h6>
-                        <h6 class="font-weight-medium">$150</h6>
+                        <h6 class="font-weight-medium">₹150</h6>
                     </div>
                     <div class="d-flex justify-content-between">
                         <h6 class="font-weight-medium">Shipping</h6>
-                        <h6 class="font-weight-medium">$10</h6>
+                        <h6 class="font-weight-medium">₹10</h6>
                     </div>
                 </div>
                 <div class="card-footer border-secondary bg-transparent">
                     <div class="d-flex justify-content-between mt-2">
                         <h5 class="font-weight-bold">Total</h5>
-                        <h5 class="font-weight-bold">$160</h5>
+                        <h5 class="font-weight-bold">₹160</h5>
                     </div>
                     <a href="{% url 'checkout' carts.id %}"class="btn btn-block btn-primary my-3 py-3">Proceed To Checkout</a>
                 </div>
             </div>
-            <div class="card border-secondary mb-5">
-                <div class="card-header bg-secondary border-0">
-                    <h4 class="font-weight-semi-bold m-0">Delivery Address</h4>
-                </div>
-                {% if not address %}
-                <div class="input-group-append">
-                    <a href="{% url 'addressdisplay' %}"  class="btn btn-primary mt-4">Add Address</a>
-                </div> 
-                   
-                    <!-- <div class="form-check">
-                        <input class="form-check-input  default-address" type="radio" name="defaultAddress" value="{{ address.id }}" id="defaultAddress{{ address.id }} {% if address.is_default %} checked {% endif %}" >
-                        <label class="form-check-label" for="defaultAddress{{ address.id }}">
-                            Set as Default
-                        </label>
-                </div> -->
-                {% else %}
-                <div class="card-body ">
-                    <h5 class="card-title text-center text-capitalize">{{address.house_name}}</h5>
-                    <p class="card-text text-center text-capitalize">{{address.street}},{{address.city}},{{address.postal_code}}</p>
-                    <p class="card-text text-center text-capitalize">{{address.district}},{{address.state}},{{address.country}}</p>
-                    <div class="input-group-append">
-                        <a href="{% url 'addressdisplay' %}"  class="btn btn-block btn-primary">Edit or Change Address</a>
-                    </div>
-                <div class="card-footer border-secondary bg-transparent">
-                    <button class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Place Order</button>
-                </div>
-            </div>
-            {% endif %}
-        </div>
+           
     </div>
 </div>
 <!-- Cart End -->
