--- a/home/templates/userside/cart.html
+++ b/home/templates/userside/cart.html
@@ -20,7 +20,7 @@
                 </thead>
                 <tbody class="align-middle">
                     {% for cart_item in cart_items %}
-                    <tr data-cart-item-id="{{ cart_item.id }}">
+                    <tr data-cart-item-id="{{ cart_item.id }}" data-cart-id="{{carts.id}}">
                         {% with product_variant=cart_item.product_variant %}
                             {% with product=product_variant.prod_id %}
                                 {% with product_img=product.product_image.first %}
@@ -99,17 +99,17 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between mb-3 pt-1">
                         <h6 class="font-weight-medium">Subtotal</h6>
-                        <h6 class="font-weight-medium">₹150</h6>
+                        <h6 class="font-weight-medium" id="subtotal_{{carts.id}}">₹{{carts.total_price}}</h6>
                     </div>
                     <div class="d-flex justify-content-between">
                         <h6 class="font-weight-medium">Shipping</h6>
-                        <h6 class="font-weight-medium">₹10</h6>
+                        <h6 class="font-weight-medium">₹{{carts.shipping}}</h6>
                     </div>
                 </div>
                 <div class="card-footer border-secondary bg-transparent">
                     <div class="d-flex justify-content-between mt-2">
                         <h5 class="font-weight-bold">Total</h5>
-                        <h5 class="font-weight-bold">₹160</h5>
+                        <h5 class="font-weight-bold"id="cart_total_{{carts.id}}" >₹{{carts.cart_total}}</h5>
                     </div>
                     <a href="{% url 'checkout' carts.id %}"class="btn btn-block btn-primary my-3 py-3">Proceed To Checkout</a>
                 </div>
@@ -142,27 +142,28 @@ $(document).ready(function() {
     $('.btn-minus').click(function() {
         console.log("Minus button clicked");
         var itemId = $(this).closest('tr').data('cart-item-id');
+        var cartId = $(this).closest('tr').data('cart-id');
         var $quantityInput = $('#quantityInput_' + itemId); 
         var currentQuantity = parseInt($quantityInput.val());
         if (currentQuantity > 0) {
-            updateQuantity(itemId, currentQuantity);
+            updateQuantity(itemId, currentQuantity,cartId);
             $quantityInput.val(currentQuantity );
             updatecartcount()
         }
         else{
             if (confirm("Do you want to remove this item from the cart?")) {
                 // If user confirms, remove the item from the cart
-                removeCartItem(itemId);
+                removeCartItem(itemId,cartId);
             }
             else{
-            updateQuantity(itemId, currentQuantity+1);
+            updateQuantity(itemId, currentQuantity+1,cartId);
             $quantityInput.val(currentQuantity +1 );
             updatecartcount()
             }
 
         }
     });
-    function removeCartItem(itemId) {
+    function removeCartItem(itemId,cartId) {
         var csrftoken = getCookie('csrftoken');
         
         $.ajax({
@@ -171,10 +172,14 @@ $(document).ready(function() {
             headers: { "X-CSRFToken": csrftoken },
             data: {
                 'item_id': itemId,
+                'cart_id':cartId
             },
             success: function(response) {
                 alert('Item removed from cart');
                 location.reload();
+                $('#subtotal_' + cartId).text(response.subtotal); 
+                $('#cart_total_' + cartId).text(response.cart_total);
+               
             },
             error: function(xhr, errmsg, err) {
                 console.log(xhr.status + ": " + xhr.responseText);
@@ -186,6 +191,7 @@ $(document).ready(function() {
     $('.btn-remove').click(function(){
         console.log("Remove button clicked");
         var itemId = $(this).closest('tr').data('cart-item-id');
+        var cartId = $(this).closest('tr').data('cart-id');
         //var $quantityInput = $('#quantityInput_' + itemId); 
         //var currentQuantity = parseInt($quantityInput.val());
         if (confirm("Are you sure you want to remove this item from the cart?")) {
@@ -195,11 +201,13 @@ $(document).ready(function() {
             headers: { "X-CSRFToken": csrftoken }, // Include CSRF token in headers
             data: {
                 'item_id': itemId,
+                'cart_id':cartId
             },
             success: function(response) {
                alert('Item removed from cart') 
                location.reload();
-               
+               $('#subtotal_' + cartId).text(response.subtotal); 
+               $('#cart_total_' + cartId).text(response.cart_total);
               
             },
             error: function(xhr, errmsg, err) {
@@ -220,26 +228,30 @@ $(document).ready(function() {
     $('.btn-plus').click(function() {
         console.log("Plus button clicked"); 
         var itemId = $(this).closest('tr').data('cart-item-id');
+        var cartId = $(this).closest('tr').data('cart-id');
         var $quantityInput = $('#quantityInput_' + itemId); // Define $quantityInput here
         var currentQuantity = parseInt($quantityInput.val());
         $quantityInput.val(currentQuantity);
-        updateQuantity(itemId, currentQuantity);
+        updateQuantity(itemId, currentQuantity,cartId);
         updatecartcount()
 
     });
 
-    function updateQuantity(itemId, newQuantity) {
+    function updateQuantity(itemId, newQuantity,cartId) {
     $.ajax({
         url: "{% url 'update_cart_item' %}",
         method: "POST",  // Change method to POST
         headers: { "X-CSRFToken": csrftoken }, // Include CSRF token in headers
         data: {
             'item_id': itemId,
-            'quantity': newQuantity
+            'quantity': newQuantity,
+            'cart_id':cartId
         },
         success: function(response) {
             $('#quantityInput_' + itemId).val(response.quantity); // Update quantity in input field
-            $('#itemTotalPrice_' + itemId).text(response.total_price); 
+            $('#itemTotalPrice_' + itemId).text(response.total_price);
+            $('#subtotal_' + cartId).text(response.subtotal); 
+            $('#cart_total_' + cartId).text(response.cart_total);
             updatecartcount();
             // Update total price or any other relevant UI here
         },
