--- a/home/templates/userside/checkout.html
+++ b/home/templates/userside/checkout.html
@@ -2,63 +2,68 @@
     <!-- Checkout Start -->
     {% block content%}
     <div class="container-fluid pt-5">
-        <div class="row px-xl-5">
-            <div class="col-lg-8">
+        <div class="row px-xl-5 justify-content-between">
+            <div class="col-lg-4">
                 <div class="mb-4">
                     <h4 class="font-weight-semi-bold mb-4">Billing Address</h4>
                     <div class="row">
                         <div class="col-md-6 form-group">
-                            <label>First Name</label>
-                            <input class="form-control" type="text" placeholder="John">
+                            <label>User Name</label>
+                            <input class="form-control" type="text" placeholder="User name" value="{{context.cust_detail.user_name}}">
                         </div>
-                        <div class="col-md-6 form-group">
+                        <!-- <div class="col-md-6 form-group">
                             <label>Last Name</label>
                             <input class="form-control" type="text" placeholder="Doe">
-                        </div>
+                        </div> -->
                         <div class="col-md-6 form-group">
                             <label>E-mail</label>
-                            <input class="form-control" type="text" placeholder="example@email.com">
+                            <input class="form-control" type="text" placeholder="example@email.com" value="{{user.email}}" >
                         </div>
                         <div class="col-md-6 form-group">
                             <label>Mobile No</label>
-                            <input class="form-control" type="text" placeholder="+123 456 789">
+                            <input class="form-control" type="text" placeholder="+123 456 789" value="{{context.cust_detail.phone_number}}">
                         </div>
                         <div class="col-md-6 form-group">
-                            <label>Address Line 1</label>
-                            <input class="form-control" type="text" placeholder="123 Street">
+                            <label>House Name</label>
+                            <input class="form-control" type="text" placeholder="123 Street" value="{{context.address.house_name}}">
                         </div>
                         <div class="col-md-6 form-group">
-                            <label>Address Line 2</label>
-                            <input class="form-control" type="text" placeholder="123 Street">
-                        </div>
-                        <div class="col-md-6 form-group">
-                            <label>Country</label>
-                            <select class="custom-select">
-                                <option selected>United States</option>
-                                <option>Afghanistan</option>
-                                <option>Albania</option>
-                                <option>Algeria</option>
-                            </select>
+                            <label>Street</label>
+                            <input class="form-control" type="text" placeholder="123 Street" value="{{context.address.street}}">
                         </div>
                         <div class="col-md-6 form-group">
                             <label>City</label>
-                            <input class="form-control" type="text" placeholder="New York">
+                            <input class="form-control" type="text" placeholder="New York" value="{{context.address.city}}">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>District</label>
+                            <input class="form-control" type="text" placeholder="New York" value="{{context.address.district}}">
                         </div>
                         <div class="col-md-6 form-group">
                             <label>State</label>
-                            <input class="form-control" type="text" placeholder="New York">
+                            <input class="form-control" type="text" placeholder="New York" value="{{context.address.state}}" >
                         </div>
                         <div class="col-md-6 form-group">
-                            <label>ZIP Code</label>
-                            <input class="form-control" type="text" placeholder="123">
+                            <label>pin Code</label>
+                            <input class="form-control" type="text" placeholder="123" value="{{context.address.postal_code}}">
                         </div>
-                        <div class="col-md-12 form-group">
+                        <div class="col-md-6 form-group">
+                            <label>Country</label>
+                            <input class="form-control" type="text" placeholder="New York" value="{{context.address.country}}" >
+
+                        </div>
+                        
+                       
+                        <!-- <div class="col-md-12 form-group">
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="newaccount">
                                 <label class="custom-control-label" for="newaccount">Create an account</label>
                             </div>
+                        </div> -->
+                        <div class="card-footer border-secondary bg-transparent">
+                            <a href="{% url 'addressdisplay' %}"  class="btn btn-sm btn-block btn-primary  my-3 py-3">Edit or Change Address</a>
                         </div>
-                        <div class="col-md-12 form-group">
+                        <div class="col-md-12 form-group" style="display:none;">
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="shipto">
                                 <label class="custom-control-label" for="shipto"  data-toggle="collapse" data-target="#shipping-address">Ship to different address</label>
@@ -66,7 +71,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="collapse mb-4" id="shipping-address">
+                <!-- <div class="collapse mb-4" id="shipping-address">
                     <h4 class="font-weight-semi-bold mb-4">Shipping Address</h4>
                     <div class="row">
                         <div class="col-md-6 form-group">
@@ -115,41 +120,40 @@
                             <input class="form-control" type="text" placeholder="123">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-6">
                 <div class="card border-secondary mb-5">
                     <div class="card-header bg-secondary border-0">
                         <h4 class="font-weight-semi-bold m-0">Order Total</h4>
                     </div>
                     <div class="card-body">
-                        <h5 class="font-weight-medium mb-3">Products</h5>
-                        <div class="d-flex justify-content-between">
-                            <p>Colorful Stylish Shirt 1</p>
-                            <p>$150</p>
+                        <div class="col d-flex justify-content-between "><h5 class="font-weight-medium mb-3">Products</h5>
+                            <h5 class="font-weight-medium mb-3">Quantity</h5>  
+                            <h5 class="font-weight-medium mb-3">Price</h5>  
                         </div>
+                        {% for items in context.cart_items %}
                         <div class="d-flex justify-content-between">
-                            <p>Colorful Stylish Shirt 2</p>
-                            <p>$150</p>
+                            <p>{{items.product_variant.prod_id.pr_name}}</p>
+                            <p>{{items.quantity}}</p>
+                            <p>{{items.item_total_price}}</p>
                         </div>
-                        <div class="d-flex justify-content-between">
-                            <p>Colorful Stylish Shirt 3</p>
-                            <p>$150</p>
-                        </div>
+                        {% endfor %}
+                       
                         <hr class="mt-0">
                         <div class="d-flex justify-content-between mb-3 pt-1">
                             <h6 class="font-weight-medium">Subtotal</h6>
-                            <h6 class="font-weight-medium">$150</h6>
+                            <h6 class="font-weight-medium">{{context.cart.total_price}}</h6>
                         </div>
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-medium">Shipping</h6>
-                            <h6 class="font-weight-medium">$10</h6>
+                            <h6 class="font-weight-medium">{{context.cart.shipping}}</h6>
                         </div>
                     </div>
                     <div class="card-footer border-secondary bg-transparent">
                         <div class="d-flex justify-content-between mt-2">
                             <h5 class="font-weight-bold">Total</h5>
-                            <h5 class="font-weight-bold">$160</h5>
+                            <h5 class="font-weight-bold">{{context.cart.cart_total}}</h5>
                         </div>
                     </div>
                 </div>
@@ -178,7 +182,7 @@
                         </div>
                     </div>
                     <div class="card-footer border-secondary bg-transparent">
-                        <button class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Place Order</button>
+                        <a  href="" class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Place Order</a>
                     </div>
                 </div>
             </div>
