--- a/home/templates/userside/checkout.html
+++ b/home/templates/userside/checkout.html
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="card-footer border-secondary bg-transparent">
-                        <a  href="" class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Place Order</a>
+                        <a  href="{% url 'order_display' %}" class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Place Order</a>
                     </div>
                 </div>
             </div>
