--- a/home/templates/userside/emptycart.html
+++ b/home/templates/userside/emptycart.html
@@ -11,9 +11,9 @@
     }
 </style>
 <!-- Cart Start -->
-<div class="col text-start">
+<!-- <div class="col text-start">
     <h1>OOPS!Your Cart is Empty</h1>
-</div>
+</div> -->
 <div class="row align-content-center justify-content-center">
  
     <div class="col text-center">
