--- a/home/templates/profilebase.html
+++ b/home/templates/profilebase.html
@@ -28,7 +28,7 @@
                     <a id="profileBtn" href="{% url 'user_profile' %}"class="btn btn-primary btn-block mb-3">My Profile</a>
                     <a id="addressBtn" href="{% url 'addressdisplay' %}" class="btn btn-primary btn-block mb-3">My Address</a>
                     <a id="passwordBtn" href="{% url 'user_password' %}" class="btn btn-primary btn-block mb-3">My Password</a>
-                    <a id="ordersBtn" href="{% url 'order_display' %}"  class="btn btn-primary btn-block mb-3">My Orders</a>
+                    <a id="ordersBtn" href="{% url 'order_history' %}"  class="btn btn-primary btn-block mb-3">My Orders</a>
                    
                     <a id="walletBtn" class="btn btn-primary btn-block mb-3">My Wallet</a>
                    
