--- a/adminapp/templates/adminside/orderlist.html
+++ b/adminapp/templates/adminside/orderlist.html
@@ -72,7 +72,7 @@
 
                     </div>
                     <div class="table-responsive">
-                        <table id="data-table-basic" class="table table-striped">
+                        <table id="data-table-basic" class="table  table-striped">
                             <thead>
                                 <tr>
                                     <th> Order ID</th>
@@ -90,32 +90,32 @@
                                     <td >{{order.user.email}}</td>
                                     <td> {{order.total_qnty}}</td>
                                     <td>{{order.grand_total}}</td>
+
+
+
                                     <td> 
                                         <form action="{% url 'update_status' order.id %}" method="post">
                                         {% csrf_token %}
-                                        <select name="status">
+                                        <select  class="btn btn-info dropdown-toggle"  name="status">
                                           {% for choice in status_choices %}
-                                          <option value="{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                          <option    value="{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
                                           {% endfor %}
                                         </select>
-                                        <button type="submit">Update</button>
+                                        <button class="btn btn-success m-2 " type="submit">Update</button>
                                       </form> </td>
+
+
+
+
+
+
                                     <td>{{order.created_at}}</td>
                                     {% endfor %}
                                    
                                 </tr>
                                
                             </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th> Order ID</th>
-                                    <th> User Email</th>
-                                    <th> quantity</th>
-                                    <th> Price</th>
-                                    <th> Status</th>
-                                    <th> Order Date </th>
-                                </tr>
-                            </tfoot>
+                           
                         </table>
                     </div>
                 </div>
@@ -129,6 +129,9 @@
   <!-- jquery
 		============================================ -->
         <script src="{% static 'jss/vendor/jquery-1.12.4.min.js' %}"></script>
+         <!--  animation JS
+		============================================ -->
+    <script src="{% static 'jss/animation/animation-active.js' %}"></script>
         <!-- bootstrap JS
             ============================================ -->
         <script src="{% static 'jss/bootstrap.min.js' %}"></script>
