--- a/adminapp/templates/adminside/edit_coupon.html
+++ b/adminapp/templates/adminside/edit_coupon.html
@@ -33,13 +33,13 @@
 
                <div class="form-group col-6 d-flex">
                    <div class="form-single nk-int-st widget-form">
-                       <input type="number" class="form-control" name="discount_percentage" {% if coupon.discount_percentage %} value="{{coupon.discount_percentage|floatformat}}" {% endif %} placeholder="Discount Percentage" />
+                       <input type="number" class="form-control" name="discount_percentage" {% if coupon.discount_percentage %} value="{{coupon.discount_percentage}}" {% endif %} placeholder="Discount Percentage" />
                    </div>
                </div></div>
 
                <div class="form-group">
                    <div class="form-single nk-int-st widget-form">
-                       <input type="date" class="form-control" placeholder="Expiry date" value="{{coupon.expiration_date}}"name="expiration_date" />
+                       <input type="date" class="form-control" placeholder="Expiry date" value="{{coupon.expiration_date|date:'Y-m-d'}}"name="expiration_date" />
                    </div>
                </div>
                <div class="row">
