--- a/adminapp/templates/adminside/view_coupon.html
+++ b/adminapp/templates/adminside/view_coupon.html
@@ -86,6 +86,7 @@
                                     <th> Status</th>
                                     <th> Order Date </th>
                                     <th></th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -107,7 +108,7 @@
                                     <td>{{coupon.expiration_date}}</td> 
                                     <td>{{coupon.active}}</td>
                                     <td><a href="{% url 'update_coupon' id=coupon.id %}" class="btn btn-sm btn-primary">Edit</a></td>
-                              
+                                    <td><a href="{% url 'delete_coupon' id=coupon.id %}" class="btn btn-sm btn-danger">Delete</a></td>
                                     {% endfor %}
                                    
                                 </tr>
