--- a/adminapp/templates/adminside/add_coupon.html
+++ b/adminapp/templates/adminside/add_coupon.html
@@ -52,11 +52,22 @@
                         <input type="number" class="form-control" placeholder="User Limit" name="user_limit"required />
                     </div>
                 </div></div>
-                <div class="form-group">
+
+
+                <div class="row">
+                <div class="form-group col-6 d-flex ">
                     <div class="form-single nk-int-st widget-form">
                         <input type="number" class="form-control" placeholder="minimum_purchase_amount" name="minimum_order_amount"required />
                     </div>
                 </div>
+            
+                <div class="form-group col-6 d-flex ">
+                    <div class="form-single nk-int-st widget-form">
+                        <input type="number" class="form-control" placeholder="purchase_count" name="purchase_count"required />
+                    </div>
+                </div>
+            
+            </div>
                 <div class="form-group">
                     <div class="form-single nk-int-st widget-form">
                         <textarea name="description" class="form-control" placeholder="Description" required></textarea>
