--- a/adminapp/templates/adminside/edit_coupon.html
+++ b/adminapp/templates/adminside/edit_coupon.html
@@ -52,11 +52,17 @@
                        <input type="number" class="form-control" placeholder="User Limit" value="{{coupon.user_limit}}" name="user_limit" />
                    </div>
                </div></div>
-               <div class="form-group">
+               <div class="row">
+               <div class="form-group col-6 d-flex">
                    <div class="form-single nk-int-st widget-form">
                        <input type="number" class="form-control" value="{{coupon.minimum_order_amount}}"placeholder="minimum_purchase_amount" name="minimum_order_amount" />
                    </div>
                </div>
+               <div class="form-group col-6 d-flex ">
+                <div class="form-single nk-int-st widget-form">
+                    <input type="number" class="form-control" placeholder="purchase_count" value="{{coupon.purchase_count}}"name="purchase_count"required />
+                </div>
+            </div></div>
                <div class="form-group">
                    <div class="form-single nk-int-st widget-form">
                        <textarea name="description" class="form-control" placeholder="Description" >{{coupon.description}}</textarea>
