--- a/adminapp/templates/adminside/newtemp.html
+++ b/adminapp/templates/adminside/newtemp.html
@@ -24,7 +24,7 @@
     <!-- <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
     <link rel="stylesheet" href="{% static 'csss/owl.theme.css' %}">
     <link rel="stylesheet" href="{% static 'csss/owl.transitions.css' %}">
-    <!-- meanmenu CSS -->
+     meanmenu CSS -->
         <!-- ============================================ -->
     <link rel="stylesheet" href="{% static 'csss/meanmenu/meanmenu.min.css' %}">
     <!-- animate CSS
